Step 1 : Preprocessing of the tweets is completed

--- a/supervisedLearning/logisticRegression/logisticRegression.ipynb
+++ b/supervisedLearning/logisticRegression/logisticRegression.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 71,
    "id": "5e7dfd87-5377-459d-9f04-36ac6eb7d85e",
    "metadata": {
     "slideshow": {
@@ -36,7 +36,14 @@
     "import nltk\n",
     "from nltk.corpus import twitter_samples\n",
     "import matplotlib.pyplot as plt\n",
-    "import random"
+    "import random\n",
+    "from termcolor import cprint\n",
+    "\n",
+    "import re # regular expression package\n",
+    "import string #string module\n",
+    "from nltk.corpus import stopwords # download stop words\n",
+    "from nltk.stem import PorterStemmer # module for stemming\n",
+    "from nltk.tokenize import TweetTokenizer # module ofr tokenizing"
    ]
   },
   {
@@ -49,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 72,
    "id": "f4b10995-8e2e-4d6e-b43d-815e830fff4c",
    "metadata": {},
    "outputs": [
@@ -68,7 +75,7 @@
        "'DownloadedSuccessfully'"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -95,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 73,
    "id": "38f315c3-fd6f-4b66-bda0-66abef38c86a",
    "metadata": {},
    "outputs": [
@@ -121,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 74,
    "id": "7bcaf1f3-f8a6-40a7-a9b0-e1c5d537e841",
    "metadata": {},
    "outputs": [
@@ -150,16 +157,208 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "id": "0001084c-0b00-4de4-b2f0-6dc080a1db3c",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\\d62828test\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('\\d62828' + 'test')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "6272ff2d-b5f3-47cf-a6c5-2707aae4d6db",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m\u001b[32m@dvntownsend I thought that you wanted to take  it slower for while.. :D very glad though\u001b[0m\n",
+      "\u001b[1m\u001b[31m@hfaithdavis poor kids momma died :(\u001b[0m\n"
+     ]
+    }
+   ],
+   "source": [
+    "# checking Random tweets from positive and negative categories. \n",
+    "cprint(positiveTweets[random.randint(0,5000)] , \"green\", attrs=[\"bold\"])\n",
+    "cprint(negativeTweets[random.randint(0,5000)] , \"red\", attrs=[\"bold\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0b511f76-216f-4142-aa51-974329a12861",
+   "metadata": {},
+   "source": [
+    "### Preprocessing of tweets\n",
+    "\n",
+    "data preprocessing is one of the critical step in any machine learning. it includes clearning and formatting before feeding into the machine learning algorithm. FOR NLP the preprocessing steps are comprised of the following steps.  \n",
+    "\n",
+    "- Tokenize the string\n",
+    "- lower casing. \n",
+    "- removing stop words and puncuations. \n",
+    "- Remove URLS and Handles\n",
+    "- stemming ( Convert all words to it's orgin words like tunning, tunned to tun. etc.  \n",
+    "\n",
+    "\n",
+    "### Stemming\n",
+    "\n",
+    "Stemming is the process of converting a word to its most general form, or stem. This helps in reducing the size of our vocabulary.\n",
+    "\n",
+    "Consider the words: \n",
+    " * **learn**\n",
+    " * **learn**ing\n",
+    " * **learn**ed\n",
+    " * **learn**t\n",
+    " \n",
+    "All these words are stemmed from its common root **learn**. However, in some cases, the stemming process produces words that are not correct spellings of the root word. For example, **happi** and **sunni**. That's because it chooses the most common stem for related words. For example, we can look at the set of words that comprises the different forms of happy:\n",
+    "\n",
+    " * **happ**y\n",
+    " * **happi**ness\n",
+    " * **happi**er\n",
+    " \n",
+    "We can see that the prefix **happi** is more commonly used. We cannot choose **happ** because it is the stem of unrelated words like **happen**.\n",
+    " \n",
+    "NLTK has different modules for stemming and we will be using the [PorterStemmer](https://www.nltk.org/api/nltk.stem.html#module-nltk.stem.porter) module which uses the [Porter Stemming Algorithm](https://tartarus.org/martin/PorterStemmer/). Let's see how we can use it in the cell below."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "id": "2cc7bb31-f581-4773-b8b0-bce86512631b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "My beautiful sunflowers on a sunny Friday morning off :) #sunflowers #favourites #happy #Friday off… https://t.co/3tfYom0N1i\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package stopwords to\n",
+      "[nltk_data]     /Users/arpansaini/nltk_data...\n",
+      "[nltk_data]   Unzipping corpora/stopwords.zip.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Pick below example for preprocessing and then generalize the idea on all the tweets.\n",
+    "tweet = positiveTweets[2277]\n",
+    "print(tweet)\n",
+    "\n",
+    "nltk.download('stopwords')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "id": "96bdebbc-b2b2-4ca8-9a1d-cd3305418d2f",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def preprocessing(tweet):\n",
+    "    \n",
+    "    processed_tweet = []\n",
+    "    \n",
+    "    # Remove hpyterlinks and handles.\n",
+    "    # Removing old style retweet text \"RT\"     \n",
+    "    tweet2 = re.sub(r'^RT[\\s]+', '', tweet)\n",
+    "    # Removing hyper link     \n",
+    "    tweet2 = re.sub(r'https?://[^\\s\\n\\r]+', '', tweet2)\n",
+    "    # Remvoing hash tag     \n",
+    "    tweet2 = re.sub(r'#', '', tweet2)\n",
+    "    #lower casing. \n",
+    "    tweet2 = tweet2.lower()\n",
+    "    \n",
+    "    # Tokenizing the string. \n",
+    "    # instantiate tokenizer class\n",
+    "    tokenizer = TweetTokenizer(preserve_case=False, strip_handles=True,\n",
+    "                               reduce_len=True)\n",
+    "\n",
+    "    # tokenize tweets\n",
+    "    tweet_tokens = tokenizer.tokenize(tweet2)\n",
+    "    \n",
+    "    \n",
+    "    # removing stop words and puncuations\n",
+    "    stopwords_english = stopwords.words('english')\n",
+    "    # string.punctuation\n",
+    "    \n",
+    "    for word in tweet_tokens: # Go through every word in your tokens list\n",
+    "        if (word not in stopwords_english and word not in string.punctuation): # remove stopwords and remove punctuation\n",
+    "            processed_tweet.append(word)\n",
+    "    \n",
+    "    # stemming\n",
+    "    stemmer = PorterStemmer() \n",
+    "\n",
+    "    # Create an empty list to store the stems\n",
+    "    tweets_stem = [] \n",
+    "\n",
+    "    for word in processed_tweet:\n",
+    "        stem_word = stemmer.stem(word)  # stemming word\n",
+    "        if stem_word not in tweets_stem:\n",
+    "            tweets_stem.append(stem_word)  # append to the list\n",
+    "\n",
+    "    \n",
+    "    return tweets_stem\n",
+    "    \n",
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "id": "ed6caba7-dcb3-49e3-a91e-52d07972e00a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\u001b[1m\u001b[31mMy beautiful sunflowers on a sunny Friday morning off :) #sunflowers #favourites #happy #Friday off… https://t.co/3tfYom0N1i\u001b[0m\n",
+      "\n",
+      "\u001b[1m\u001b[32m['beauti', 'sunflow', 'sunni', 'friday', 'morn', ':)', 'favourit', 'happi', '…']\u001b[0m\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"\")\n",
+    "cprint(tweet,\"red\",attrs=[\"bold\"])\n",
+    "processed_tweet = preprocessing(tweet)\n",
+    "print(\"\")\n",
+    "cprint(processed_tweet,\"green\",attrs=[\"bold\"])\n",
+    "\n",
+    "# cprint(,\"red\",attrs=[\"bold\"])"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6272ff2d-b5f3-47cf-a6c5-2707aae4d6db",
+   "id": "17de709e-7362-4b76-82c1-0d691e9a7919",
    "metadata": {},
    "outputs": [],
    "source": []
