Labels are added

--- a/supervisedLearning/logisticRegression/logisticRegression.ipynb
+++ b/supervisedLearning/logisticRegression/logisticRegression.ipynb
@@ -5,7 +5,7 @@
    "id": "d912f437-0620-48e1-ab61-311cc4c6dc00",
    "metadata": {},
    "source": [
-    "# Tweets analysis using the Logistic Regression Alorithm\n",
+    "# Tweets analysis using the Logistic Regression Algorithm\n",
     "\n",
     "we will use a Twitter dataset that comes with NLTK. This dataset has been manually annotated and serves to establish baselines for models quickly. Let us import them now as well as a few other libraries we will be using.\n",
     "\n",
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 92,
    "id": "5e7dfd87-5377-459d-9f04-36ac6eb7d85e",
    "metadata": {
     "slideshow": {
@@ -33,14 +33,18 @@
    },
    "outputs": [],
    "source": [
-    "import nltk\n",
-    "from nltk.corpus import twitter_samples\n",
+    "import numpy as np\n",
+    "\n",
     "import matplotlib.pyplot as plt\n",
     "import random\n",
+    "\n",
     "from termcolor import cprint\n",
     "\n",
     "import re # regular expression package\n",
     "import string #string module\n",
+    "\n",
+    "import nltk\n",
+    "from nltk.corpus import twitter_samples\n",
     "from nltk.corpus import stopwords # download stop words\n",
     "from nltk.stem import PorterStemmer # module for stemming\n",
     "from nltk.tokenize import TweetTokenizer # module ofr tokenizing"
@@ -56,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 93,
    "id": "f4b10995-8e2e-4d6e-b43d-815e830fff4c",
    "metadata": {},
    "outputs": [
@@ -75,7 +79,7 @@
        "'DownloadedSuccessfully'"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -102,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 99,
    "id": "38f315c3-fd6f-4b66-bda0-66abef38c86a",
    "metadata": {},
    "outputs": [
@@ -117,13 +121,33 @@
       "<class 'list'>\n",
       "5000\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[1.],\n",
+       "       [1.],\n",
+       "       [1.],\n",
+       "       ...,\n",
+       "       [0.],\n",
+       "       [0.],\n",
+       "       [0.]])"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "\n",
+    "# Get samples\n",
     "positiveTweets =  twitter_samples.strings('positive_tweets.json')\n",
     "negativeTweets =  twitter_samples.strings('negative_tweets.json')\n",
-    "print(positiveTweets[0],negativeTweets[0],type(positiveTweets), len(positiveTweets),type(negativeTweets), len(negativeTweets),sep='\\n') "
+    "print(positiveTweets[0],negativeTweets[0],type(positiveTweets), len(positiveTweets),type(negativeTweets), len(negativeTweets),sep='\\n') \n",
+    "\n",
+    "# Get labels\n",
+    "labels = np.append(np.ones((len(positiveTweets),1)), np.zeros((len(negativeTweets),1)),axis=0)\n",
+    "labels"
    ]
   },
   {
@@ -356,9 +380,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a04e90dd-ea1e-4d25-9ca7-db4513ee8d57",
+   "metadata": {},
+   "source": [
+    "### Extract Features and visualize them"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17de709e-7362-4b76-82c1-0d691e9a7919",
+   "id": "a8d595a8-e70d-41e5-a0ad-1d8e0460d91c",
    "metadata": {},
    "outputs": [],
    "source": []
